# EzCodec

./: .gitignore  CMakeLists.txt  README.md  fermat_color_encoding.md  fermat_surface.html  presentation.html
include/ezcodec/: Block.h  Codec.h  DCT.h  EzcFormat.h  FermatColor.h  Picture.h  Quantization.h  ThreadPool.h
src/: Codec.cpp  EzcFormat.cpp  Picture.cpp  Quantization.cpp  ThreadPool.cpp  main.cpp
tests/: CMakeLists.txt  test_main.cpp
